@startuml

interface Model{
String getId()
void setId(String string)
}

class ModelSupport{
String id

String getId()
void setId(String string)
}

Model <|.. ModelSupport

interface StatusModel{
int getStatus()
void setStatus(int status)
}

Model <|-- StatusModel

class StatusModelSupport{
int status

int getStatus()
void setStatus(int status)
}

ModelSupport <|-- StatusModelSupport
StatusModel <|.. StatusModelSupport

interface DomainModel{
String getDomain()
void setDomain(String domain)
}

StatusModel <|-- DomainModel

class DomainModelSupport{
String domain

String getDomain()
void setDomain(String domain)
}

StatusModelSupport <|-- DomainModelSupport
DomainModel <|.. DomainModelSupport


@enduml